--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,8 @@
 {
-  "require" : {
-    "silex/silex": "^2.0.4",
-    "monolog/monolog": "^1.22",
-    "twig/twig": "^2.0",
-    "symfony/twig-bridge": "^3"
+  "require": {
+    "php": "^5.6.0"
   },
-  "require-dev": {
+    "require-dev": {
     "heroku/heroku-buildpack-php": "*"
   }
 }
